# pg-data-sync

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/pg_data_sync/: dataset.py  db.py  sync.py  utils.py
src/pg_data_sync/models/: __init__.py  config.py  dataset_config.py  enums.py  exit_code.py  file_map.py  index_config.py  indexing_config.py
